--- a/databases/a/menuBar.css
+++ b/databases/a/menuBar.css
@@ -24,6 +24,10 @@ a {
   text-decoration:none;
   color:white;
 }
+a:hover {
+  text-decoration:underline;
+  color:white;
+}
 hr{
   border-color:#ffcc66;
 }
